# py_miner

./: .gitmodules  CMakeLists.txt  README.md  pools.txt  requirements.txt  setup.py
py_miner/: monero_cpu_miner.cpp  monero_cpu_miner.hpp  py_bindings.cpp
tests/: test_monero_cpu_miner.py
